--- a/index.html
+++ b/index.html
@@ -38,9 +38,13 @@
 				<img src="images/me.jpg" class="img-responsive">
 			</div>
 			<div class="col-md-6">
-			<img src="https://s-media-cache-ak0.pinimg.com/736x/e3/72/ac/e372ac2557ec55be03830ad5cddd8593.jpg">
+			<p>
+				My name is Franchesca Bolden and I am 1 of a kind. I'm 24 yrs old and a VERY proud mother of 2 beautiful children. My son's name is Tavion, he's 8 yrs old and my Daughter's name is Akira, she is 3 months old.
+			</p>
 			</div>
-			<div class="col-md-3"></div>
+			<div class="col-md-3">
+				<img src="images/my babies.jpg" class="img-responsive">
+			</div>
 		</section>
 		<!-- footer row, all footer content -->
 		<footer class="row">
