--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
-<body>
+<body class="hearts">
 <!-- this project uses 'bootstrap' - find out more about the features at getbootstrap.com -->
 
 	<!-- container div, all website content -->
@@ -37,7 +37,9 @@
 			<div class="col-md-3">
 				<img src="https://s-media-cache-ak0.pinimg.com/236x/d3/46/3e/d3463eb013c860fbdc374db8e1eea9fd.jpg">
 			</div>
-			<div class="col-md-6"></div>	
+			<div class="col-md-6">
+				<img src="images/tavion.jpg" class="img-responsive">
+			</div>	
 			<div class="col-md-3"></div>
 		</section>
 		<!-- footer row, all footer content -->
