--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
-<body>
+<body class="smileyface">
 <!-- this project uses 'bootstrap' - find out more about the features at getbootstrap.com -->
 
 	<!-- container div, all website content -->
