--- a/goals.html
+++ b/goals.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
-<body>
+<body class="letter">
 <!-- this project uses 'bootstrap' - find out more about the features at getbootstrap.com -->
 
 	<!-- container div, all website content -->
@@ -34,7 +34,9 @@
 		</nav>
 		<!-- section row, all primary content -->
 		<section class="row">
-			<div class="col-md-3"></div>
+			<div class="col-md-3">
+				<img src="" class="img-responsive">
+			</div>
 			<div class="col-md-6">	</div>
 			<div class="col-md-3"></div>
 		</section>
