--- a/about.html
+++ b/about.html
@@ -4,13 +4,13 @@
 	<meta charset="utf-8" lang="en">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- change the title to something related to your project -->
-	<title>Website Page 1</title>
+	<title>franchescabolden</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
-<body class="hearts">
+<body class="my2">
 <!-- this project uses 'bootstrap' - find out more about the features at getbootstrap.com -->
 
 	<!-- container div, all website content -->
@@ -27,20 +27,16 @@
 				<li role="presentation"><a href="index.html">FRANCHESCA</a></li>
 				<li role="presentation"class="active"><a href="about.html">ABOUT ME</a></li>
 				<li role="presentation"><a href="goals.html">MY GOALS</a></li>
-				<li role="presentation"><a href="contact.html">CONTACT INFO</a></li>
 				</ul>
 
 			</div>			
 		</nav>
 		<!-- section row, all primary content -->
 		<section class="row">
-			<div class="col-md-3">
-				<img src="https://s-media-cache-ak0.pinimg.com/236x/d3/46/3e/d3463eb013c860fbdc374db8e1eea9fd.jpg">
-			</div>
-			<div class="col-md-6">
-				<img src="images/tavion.jpg" class="img-responsive">
+			<div class="col-md-12">
+								
 			</div>	
-			<div class="col-md-3"></div>
+			
 		</section>
 		<!-- footer row, all footer content -->
 		<footer class="row">
