--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,11 @@
 		</nav>
 		<!-- section row, all primary content -->
 		<section class="row">
-			<div class="col-md-3"></div>
+			<div class="col-md-3">
+				<p>
+					
+				</p>
+			</div>
 			<div class="col-md-6">	</div>
 			<div class="col-md-3"></div>
 		</section>
