--- a/goals.html
+++ b/goals.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" lang="en">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- change the title to something related to your project -->
-	<title>Website Page 1</title>
+	<title>franchescabolden</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
@@ -27,18 +27,17 @@
 				<li role="presentation"><a href="index.html">FRANCHESCA</a></li>
 				<li role="presentation"><a href="about.html">ABOUT ME</a></li>
 				<li role="presentation"class="active"><a href="goals.html">MY GOALS</a></li>
-				<li role="presentation"><a href="contact.html">CONTACT INFO</a></li>
 				</ul>
 
 			</div>			
 		</nav>
 		<!-- section row, all primary content -->
 		<section class="row">
-			<div class="col-md-3">
-				<img src="" class="img-responsive">
+			<div class="col-md-12">
+				<h1>
+					In the next 5 years I plan to have been in a career field that I love and enjoy while working towards owning a home. My goal is to be successful because all I want is what's best for my children.....
+				</h1>
 			</div>
-			<div class="col-md-6">	</div>
-			<div class="col-md-3"></div>
 		</section>
 		<!-- footer row, all footer content -->
 		<footer class="row">
