--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" lang="en">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- change the title to something related to your project -->
-	<title>Website Page 1</title>
+	<title>franchescabolden</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
@@ -27,7 +27,6 @@
 				<li role="presentation"class="active"><a href="index.html">FRANCHESCA</a></li>
 				<li role="presentation"><a href="about.html">ABOUT ME</a></li>
 				<li role="presentation"><a href="goals.html">MY GOALS</a></li>
-				<li role="presentation"><a href="contact.html">CONTACT INFO</a></li>
 				</ul>
 
 			</div>			
@@ -35,7 +34,7 @@
 		<!-- section row, all primary content -->
 		<section class="row">
 			<div class="col-md-3">
-				<img src="images/me.jpg" class="img-responsive">
+				<img src="images/me.jpg" class="img-thumbnail" class="img-responsive">
 			</div>
 			<div class="col-md-6">
 			<p>
@@ -43,7 +42,7 @@
 			</p>
 			</div>
 			<div class="col-md-3">
-				<img src="images/my babies.jpg" class="img-responsive">
+				<img src="images/mybabies.jpg" class="img-thumbnail" class="img-responsive">
 			</div>
 		</section>
 		<!-- footer row, all footer content -->
