--- a/goals.html
+++ b/goals.html
@@ -35,7 +35,7 @@
 		<section class="row">
 			<div class="col-md-12">
 				<h1>
-					In the next 5 years I plan to have been in a career field that I love and enjoy while working towards owning a home. My goal is to be successful because all I want is what's best for my children.....
+					In the next 5 years, I plan to have been in a career field that I love and enjoy while working towards owning a home. My goal is to be successful because all I want is what's best for my children.....
 				</h1>
 			</div>
 		</section>
