--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 				<img src="images/me.jpg" class="img-thumbnail" class="img-responsive">
 			</div>
 			<div class="col-md-6">
-			<p>
-				My name is Franchesca Bolden and I am 1 of a kind. I'm 24 yrs old and a VERY proud mother of 2 beautiful children. My son's name is Tavion, he's 8 yrs old and my Daughter's name is Akira, she is 3 months old.
+			<p>It's not what you give up to be a mother, it's what you gain by choosing to be a MOMMY!!!
 			</p>
 			</div>
 			<div class="col-md-3">
@@ -47,9 +46,11 @@
 		</section>
 		<!-- footer row, all footer content -->
 		<footer class="row">
-			<div class="col-md-4"></div>
-			<div class="col-md-4">	</div>
-			<div class="col-md-4">		</div>	
+			<div class="col-md-12">
+				<img src="http://www.imagesbuddy.com/images/168/my-children-taught-me-the-true-meaning-of-unconditional-love.jpg" class="img-thumbnail" class="img-responsive"
+				 width="1200">
+			</div>
+		
 		</footer>
 	</div>
 </body>
