--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
-<body class="my2">
+<body>
 <!-- this project uses 'bootstrap' - find out more about the features at getbootstrap.com -->
 
 	<!-- container div, all website content -->
@@ -33,8 +33,13 @@
 		</nav>
 		<!-- section row, all primary content -->
 		<section class="row">
-			<div class="col-md-12">
-								
+			<div class="col-md-6">
+			<img src="images/my2.jpg" class="img-thumbnail" class="img-responsive">
+			</div>
+			<div class="col-md-6">
+			 <p>
+			 	My name is Franchesca Bolden and I am 1 of a kind. I'm 24 yrs old and a VERY proud mother of 2 beautiful children. My son's name is Tavion, he's 8 yrs old and my Daughter's name is Akira, she is 3 months old.
+			 </p>
 			</div>	
 			
 		</section>
